change name to setSetpoint
modified clamp to work with lower java version, should update later